--- a/all.css
+++ b/all.css
@@ -45,7 +45,7 @@ footer {
 .navbar-list {
     list-style-type: none;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .navbar-list li {
@@ -58,6 +58,9 @@ footer {
     padding: 12px 24px; /* Increased padding to make the links larger */
     border-radius: 4px;
     transition: background-color 0.2s ease-in-out;
+    white-space: nowrap;
+    overflow: hidden;
+
 }
 
 .navbar-list a:hover {
