--- a/all.css
+++ b/all.css
@@ -58,10 +58,68 @@ footer {
     padding: 12px 24px; /* Increased padding to make the links larger */
     border-radius: 4px;
     transition: background-color 0.2s ease-in-out;
-    white-space: nowrap;
-    overflow: hidden;
 }
 
 .navbar-list a:hover {
     background-color: #575757;
 }
+#drop-down{
+    display: none;
+}
+.burger{
+    display: none;
+}
+@media only screen and (max-width: 700px) {
+    body {
+      background-color: transparent;
+    }
+    .navbar-list{
+        display: none;
+    }
+    #burger {
+        cursor: pointer;
+        padding: 0; /* Padding similar to navbar links for consistency */
+        border-radius: 4px;
+        display: block; /* Only show the burger in mobile view */
+    }
+    
+    #burger div {
+        background-color: white; /* Make the burger lines white */
+        height: 3px; /* Line thickness */
+        width: 30px;
+        margin: 7px 0; /* Space between lines */
+        transition: all 0.3s ease;
+    }
+    
+    #burger:hover div {
+        background-color: #b0b0b0; /* Hover effect similar to navbar links */
+    }
+    #drop-down{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .navbar-list-drop{
+        list-style-type: none;
+    }
+    .navbar-list-drop li{
+        margin-top: 10px;
+        font-size: 1em;
+    }
+    .navbar-list-drop li a{
+        text-decoration: none;
+    }
+    #drop-down.active {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        background-color: #333;
+        padding: 10px 0;
+        align-items: center;  /* This centers children horizontally in a column layout */
+    }
+
+    #drop-down.not-active {
+        display: none; /* Ensures it remains hidden when not active */
+    }
+  }
