--- a/all.css
+++ b/all.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     color: white;
     font-family: sans-serif;
+    font-size: 1.2pc;
 }
 body {
     display: flex;
@@ -46,7 +47,9 @@ footer {
     list-style-type: none;
     display: flex;
     justify-content: space-around;
+    align-items: center; /* Center items vertically */
 }
+
 
 .navbar-list li {
     margin: 0 20px; /* Increased margin for better spacing between items */
@@ -55,23 +58,45 @@ footer {
 .navbar-list a {
     color: white;
     text-decoration: none;
+    transition: background-color 0.2s ease-in-out;
+    
+}
+.nav-items{
     padding: 12px 24px; /* Increased padding to make the links larger */
     border-radius: 4px;
-    transition: background-color 0.2s ease-in-out;
 }
 
-.navbar-list a:hover {
+.nav-items:hover {
     background-color: #575757;
 }
+.logo-box{
+    border-radius: 50px;
+    margin: 0px;
+    padding: 0px;
+}
+.logo {
+    width: 60px;
+    height: 60px;
+    /*FIXING THE COLOR OF SVG*/
+    filter: invert(1);
+    
+}
+
+
+
 #drop-down{
     display: none;
 }
 .burger{
     display: none;
 }
-@media only screen and (max-width: 700px) {
+
+@media only screen and (max-width: 800px) {
+    *{
+        font-size: 1.2pc;
+    }
     body {
-      background-color: transparent;
+      background-color: transparent; 
     }
     .navbar-list{
         display: none;
@@ -87,7 +112,7 @@ footer {
         height: 3px; /* Line thickness */
         width: 30px;
         margin: 7px 0; /* Space between lines */
-        transition: all 0.3s ease;
+        transition: all .3s ease;
     }
     
     #burger:hover div {
@@ -98,13 +123,16 @@ footer {
         display: flex;
         flex-direction: row;
         justify-content: center;
+        transition: all 0.5s ease;
     }
     .navbar-list-drop{
         list-style-type: none;
+        transition: all 1s ease;
     }
     .navbar-list-drop li{
         margin-top: 10px;
         font-size: 1em;
+        
     }
     .navbar-list-drop li a{
         text-decoration: none;
@@ -121,7 +149,9 @@ footer {
         width: 100%;
         background-color: #333;
         padding: 10px 0;
-        align-items: center;  /* This centers children horizontally in a column layout */
+        align-items: center;
+        
+          /* This centers children horizontally in a column layout */
     }
 
     #drop-down.not-active {
